# nemotron-january-2026

./: .gitignore  CLAUDE.md  README.md  notes-june-1.md  pyproject.toml
deploy/: DEPLOYMENT.md  README.md  RUNBOOK-phase1.md  asr.env.example  drain.sh  gen_haproxy.py  haproxy.cfg.example  launch_multiproc.sh  launch_single.sh  nemotron-asr.service  smoke_local.sh
docs/: eou-asr-internal-finding.md  semantic-wer-finalization-finding.md  ttfs-latency-explainer.html  unified-container-plan.md
ec2-bench/: .gitignore  .instance_b3_fu1_l40s.json  .instance_b3_fu2_profile_l40s.json  .instance_b3_fu5_l4.json  .instance_b3_fu5b_l4.json  .instance_venv_l40s_smoke.json  README.md  bench_client_wan.sh  bench_lanes_ab.sh  bench_local_sweep.sh  bench_prod_multiproc.sh  bench_prod_sweep.sh  bootstrap.sh  ec2_down.py  ec2_loadgen.py  ec2_push.sh  ec2_up.py  run_bench.sh  run_l4_ttfs_sweep.sh  run_lanes.sh  run_multiproc.sh  start_prod_server.sh
pipecat_bots/: bot_vllm.py
proj-2026-05-17-1708/: PLAN.md  equiv_harness.py  fix-7d-r1.md  probe_alias.py  review-7d-adversarial.md  review-ttfs-explainer.md  ringbuf_perf.py  stft_feasibility.py
proj-2026-05-19-eou-endpointing/: PLAN.md  collect_signals.py  concurrency_test.py  concurrency_test_results.json  eou_diagnostic.py  full1000_silence0_warm200_c12_results.json  oracle_roc.py  oracle_roc_100sample.json  probe_a_decoding_cfg.py  rc1_stability.py  readme-row-silence0-warm200.md  review-plan-adversarial.md  run_full1000_conc12.py  runbook.md  silence-pad-tuning-notes.md  silence-pump-architecture-draft.md  silence_pad_replay.py  silence_pad_replay_results.json  subset.json
proj-2026-05-20-1947/: PLAN.md  multilingual-support-summary.md  probe_ea_streaming.py  step6-ml-comparison.md
proj-2026-05-20-modal-cost/: RESULTS.md  coloc_loadgen.py
proj-2026-05-21-0410/: IMPLEMENTATION-STATUS.md  PLAN.md  SUMMARY.md  baseline_capture.py  claude-plan-review.md  claude-review-round1.md  claude-review-round2.md  claude-review-round3.md  codex-plan-review.md  codex-review-round1.md  codex-review-round2.md  codex-review-round3.md  highN-validation.md  inphase-confirmation.md  inphase_loadgen.py  local-validation.md  manual-cudagraph-probe.md  max-parallelism-sweep.md  modal-resweep.md  multilingual_baseline_capture.py  parallel-lane-feasibility.md  probe_batched_preprocess.py  probe_batched_step.py  probe_decoder_strategy.py  probe_encoder_compile.py  probe_greedy_batch_multichunk.py  probe_manual_cudagraph.py  review-prompt-round1.txt  review-prompt-round2.txt  review-prompt-round3.txt  scheduler-implementation-notes.md  test_batch_memory_churn.py  test_batch_primitives.py  test_batch_state.py
proj-2026-05-21-1959-cudagraph/: PLAN.md  cloud-retest.md  finalize-optimization-suggestions.md  local-knee.md  probe_perB_cudagraph.py  step4_byte_exact_canary.sh  step5_local_knee.sh  step6_cloud_retest.sh  step7_coalesce_retest.sh
proj-2026-05-21-inference-opt/: .gitignore  PLAN.md  fp16_probe.py  g6-vs-g6e-results.md  round1-analysis.md  round1-self-analysis.md  round1-synthesis.md  round2-barrier-drain.md  round3-finalize-storm.md  round4-finalize-preproc.md  round5-perB-cudagraph.md
proj-2026-05-22-1353/: PLAN.md  codex-finalize-batching-findings.md  codex-stall-analysis.md  finalize-batching-investigation.md  finalize-graph-WIN.md  finalize-python-tail-analysis.md  finalize-telemetry.md  hang-fix-verification.md  leaderboard-decomp-STALL.md  leaderboard-decomposition.md  local_finalize_probe.sh  local_finalize_probe2.sh  local_finalize_profile_kernel.sh  local_hang_repro.sh  local_probe3_barrier_drain.sh  local_stall_confirm.sh  local_stress_battery.sh  stall-synthesis.md  step1_repro_gate.sh  step1b_repro_gate_multiproc.sh  step1c_batch_finalize_compare.sh
proj-2026-05-23-1731/: PLAN.md  conc10-pivot-findings.md  decoder-graph-probe-findings.md  decoder_graph_harness.py  finalize-p50-decomposition.md  foundation-invariance.md  prod-multiproc-remeasure.md  roofline-COMBINED.md  roofline-codex.md  roofline-subagent.md
proj-2026-05-24-0859/: PLAN.md  gil-attribution.md  padded-t-findings.md  padded_t_probe.py  validation.md
proj-2026-05-24-from-scratch-runtime/: 1.4b-PLAN.md  CHECKPOINT-scaling-above-36.md  PHASE2-PLAN.md  PLAN.md  PLAN_RULES.md  STEP3B-WS-PLAN.md
proj-2026-05-24-from-scratch-runtime/runtime/cpp/: CMakeLists.txt  aoti_encoder_main.cpp  batched_steady_scheduler.cpp  batched_steady_scheduler.h  decode_main.cpp  density_admission.cpp  density_admission.h  density_main.cpp  finalize_main.cpp  pipeline_main.cpp  session_main.cpp  steady_batch_bench.cpp  steady_batch_primitive.h  steady_main.cpp  ws_server.cpp
proj-2026-05-24-from-scratch-runtime/runtime/cpp/lib/admission/: density_admission.cpp  density_admission.h
proj-2026-05-24-from-scratch-runtime/runtime/cpp/lib/scheduler/: batched_steady_scheduler.cpp  batched_steady_scheduler.h  steady_batch_primitive.h
proj-2026-05-24-from-scratch-runtime/runtime/cpp/lib/session/: runtime.cpp  runtime.h  session.cpp  session.h
proj-2026-05-24-from-scratch-runtime/runtime/cpp/lib/telemetry/: session_timing.h  stats_collector.cpp  stats_collector.h
proj-2026-05-24-from-scratch-runtime/runtime/cpp/lib/ws/: framing.cpp  framing.h
proj-2026-05-24-from-scratch-runtime/spikes/0.1-overlap-ablation/microbench/: CMakeLists.txt  README.md  RESULTS-5090.md  RESULTS-L40S.md  export_encoder.py  microbench.cpp  run_l40s_remote.sh
proj-2026-05-24-from-scratch-runtime/spikes/0.1-overlap-ablation/microbench/artifacts/: .gitignore  shapes.json
proj-2026-05-27-l40s-cluster-deploy/: LOAD-TEST-NOTES.md  PLAN.md  analyze_load_test.py  load_test_orchestrator.py  review-round1-codex.md  review-round1-me.md  review-round2-codex.md  review-round2-me.md  review-round3-codex.md  review-round3-me.md  review-round4-codex.md  review-round4-me.md  review-round5-codex.md  review-round5-me.md  single_ws_demo.py
proj-2026-05-29-1336/: PLAN.md
proj-2026-05-30-2202/: PLAN.md  baseline.md  prewarm.md  probe1.md  probe7.md  remeasure.md  run_cold_baseline.sh  run_remeasure.sh  step1-cache-api.json  (+14 more)
(+474 files in other folders)
