cmake_minimum_required(VERSION 3.18)
project(decode LANGUAGES CXX)   # pure C++; link prebuilt libtorch, no nvcc (glibc-2.41 workaround, as 0.1b)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT DEFINED TORCH_ROOT)
  message(FATAL_ERROR "pass -DTORCH_ROOT=<site-packages>/torch")
endif()
if(NOT DEFINED CUDA_ROOT)
  set(CUDA_ROOT "/usr/local/cuda-12.8")
endif()
add_executable(decode decode_main.cpp)
target_include_directories(decode PRIVATE ${TORCH_ROOT}/include ${TORCH_ROOT}/include/torch/csrc/api/include ${CUDA_ROOT}/targets/x86_64-linux/include)
target_compile_definitions(decode PRIVATE _GLIBCXX_USE_CXX11_ABI=1)
target_link_directories(decode PRIVATE ${TORCH_ROOT}/lib ${CUDA_ROOT}/lib64 ${CUDA_ROOT}/lib64/stubs)
target_link_libraries(decode torch torch_cpu torch_cuda c10 c10_cuda cudart pthread)
set_target_properties(decode PROPERTIES BUILD_RPATH "${TORCH_ROOT}/lib;${CUDA_ROOT}/lib64")

add_executable(pipeline pipeline_main.cpp)
target_include_directories(pipeline PRIVATE ${TORCH_ROOT}/include ${TORCH_ROOT}/include/torch/csrc/api/include ${CUDA_ROOT}/targets/x86_64-linux/include)
target_compile_definitions(pipeline PRIVATE _GLIBCXX_USE_CXX11_ABI=1)
target_link_directories(pipeline PRIVATE ${TORCH_ROOT}/lib ${CUDA_ROOT}/lib64 ${CUDA_ROOT}/lib64/stubs)
target_link_libraries(pipeline torch torch_cpu torch_cuda c10 c10_cuda cudart pthread)
set_target_properties(pipeline PROPERTIES BUILD_RPATH "${TORCH_ROOT}/lib;${CUDA_ROOT}/lib64")
